<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titlehead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95sp"
        android:layout_marginTop="37sp"
        android:layout_marginEnd="96sp"
        android:background="#359A1A"
        android:padding="20sp"
        android:text="@string/grade"
        android:textAlignment="center"
        android:paddingBottom="15sp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29sp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="29sp"
        android:padding="10sp"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prelimtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="#095A0D"
        android:paddingLeft="15sp"
        android:paddingTop="10sp"
        android:paddingRight="15sp"
        android:paddingBottom="10sp"
        android:text="@string/prelimtext"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/midtermtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#095A0D"
        android:padding="10sp"
        android:text="@string/midtermtext"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prelimtext" />

    <TextView
        android:id="@+id/endtermtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="#095A0D"
        android:padding="10sp"
        android:text="@string/endtermtext"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midtermtext" />

    <EditText
        android:id="@+id/prelimgrade"
        android:layout_width="120sp"
        android:layout_height="61sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entergrade"
        android:inputType="number"
        android:padding="20sp"
        android:textAlignment="center"
        android:textColorHint="#757575"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/prelimtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/midtermgrade"
        android:layout_width="120sp"
        android:layout_height="62sp"
        android:layout_marginTop="24sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entergrade"
        android:inputType="number"
        android:padding="20sp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/midtermtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prelimgrade"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/endtermgrade"
        android:layout_width="120sp"
        android:layout_height="62sp"
        android:layout_marginTop="24sp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entergrade"
        android:inputType="number"
        android:padding="20sp"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/endtermtext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/midtermgrade"
        app:layout_constraintVertical_bias="0.214" />

    <Button
        android:id="@+id/button"
        android:layout_width="159sp"
        android:layout_height="51sp"
        android:layout_marginTop="496dp"
        android:text="@string/button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>